2006-11-07  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (profile_derived_probe_group::emit_module_decls):
	Pass along incoming pt_regs to context of timer.profile handlers.

2006-11-06  Martin Hunt  <hunt@redhat.com>

	* translate.cxx (var::init): Check for errors when
	allocating arrays of stats, as well as other arrays.

2006-11-06  David Smith  <dsmith@redhat.com>

	Added "limit EXP" support to foreach statements.
	* translate.cxx (c_tmpcounter::visit_foreach_loop): Handles
	"limit" member variable.
	(c_unparser::visit_foreach_loop): Ditto.
	* staptree.cxx (foreach_loop::print): Prints "limit EXP"
	addition.
	(traversing_visitor::visit_foreach_loop): Handles "limit" member
	variable.
	(deep_copy_visitor::visit_foreach_loop): Ditto.
	* staptree.h (struct foreach_loop): Added "limit" member
	variable.
	* stap.1.in: Added documentation for the "limit EXP" addition to
	foreach statement.
	* parse.cxx (lexer::scan): Added "limit" keyword for foreach
	statements.
	(parser::parse_foreach_loop): Parses "limit" keyword for foreach
	statements.
	* elaborate.cxx (symresolution_info::visit_foreach_loop): Handles
	"limit" member variable.
	(typeresolution_info::visit_foreach_loop): Ditto.

2006-11-03  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (emit_address): Emit calls to _stp_module_relocate
	for $target-variable addresses in relocatable sections.

2006-11-02  Martin Hunt  <hunt@redhat.com>

	* session.h (struct systemtap_session): Add symtab. This controls 
	if a symbol table is generated and compiled into the module.

	* main.cxx (main): Set session.symtab to false. This could later 
	enabled by a command-line option if necessary.
	
	* translate.cxx (emit_symbol_data): Don't write a symbol table if
	session.symtab is false.

	* tapsets.cxx (emit_module_decls): Remove stap_module array and
	module_relocate.
	(emit_module_init): Use "_stp_module_relocate".

	* Makefile.am (staprun_SOURCES): Add symbols.c
	* Makefile.in: Rebuilt.
