@@ -9,6 +9,7 @@
 #include "config.h"
 #include "buildrun.h"
 #include "session.h"
+#include "util.h"
 
 #include <fstream>
 #include <sstream>
@@ -26,38 +27,6 @@ extern "C" {
 
 
 using namespace std;
-
-
-// return as quoted string, with at least '"' backslash-escaped
-template <typename IN> inline string
-lex_cast_qstring(IN const & in)
-{
-  stringstream ss;
-  string out, out2;
-  if (!(ss << in))
-    throw runtime_error("bad lexical cast");
-  out = ss.str();
-  out2 += '"';
-  for (unsigned i=0; i<out.length(); i++)
-    {
-      if (out[i] == '"') // XXX others?
-	out2 += '\\';
-      out2 += out[i];
-    }
-  out2 += '"';
-  return out2;
-}
-
-
-template <typename T>
-static string
-stringify(T t)
-{
-  ostringstream s;
-  s << t;
-  return s.str ();
-}
-
 
 
 int
